data/derived/fa15/progs/unify/prog0656.ml.out
Characters 48-61:
  let fixpoint (f,b) = wwhile ( let func x = f in (f, f x != b), b);;
                                                  ^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
